--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ body{
 }
 
 .row2-left a{
+    display: flex;
+    align-items: center;
     text-decoration: none;
     font-weight: 800;
     margin-top: 1em;
